Add missing files

--- a/hashing_app/templates/404.html
+++ b/hashing_app/templates/404.html
@@ -2,5 +2,5 @@
 
 
 {% block content %}
-    <h2 class="text-center">Requested URL not found. <a href="/new-hash/">Click</a> to generate new one.</h2>
+    <h2 class="text-center">Requested URL not found. <a href="/">Click</a> to generate new one.</h2>
 {% endblock %}
